--- a/app/src/main/res/layout/activity_taxi.xml
+++ b/app/src/main/res/layout/activity_taxi.xml
@@ -42,9 +42,10 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#F6F8F8"
+        android:background="#FFEB3B"
         android:onClick="last"
         android:text="Fair Fare"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
