--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginLeft="40dp"
         android:text="Name -"
         android:textSize="20dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/Distance"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -29,6 +30,7 @@
         android:layout_marginLeft="2dp"
         android:layout_marginBottom="64dp"
         android:text="Phone -"
+        android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
@@ -44,6 +46,7 @@
         android:layout_marginRight="60dp"
         android:ems="10"
         android:hint="      Enter the Name"
+        android:textColorHint="@color/black"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -64,16 +67,16 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
         android:text="Email -"
+        android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.485"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -99,6 +102,7 @@
         android:layout_marginRight="30dp"
         android:ems="10"
         android:hint="   Enter Phone Number"
+        android:textColorHint="@color/black"
         android:inputType="phone"
         app:layout_constraintBaseline_toBaselineOf="@+id/Distance"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,6 +117,7 @@
         android:layout_marginRight="30dp"
         android:ems="10"
         android:hint="          Enter E-mail"
+        android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
