--- a/app/src/main/res/layout/activity_rickshaw.xml
+++ b/app/src/main/res/layout/activity_rickshaw.xml
@@ -46,6 +46,8 @@
         android:layout_height="wrap_content"
         android:onClick="last"
         android:text="Fair Fare"
+        android:background="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
