App After Update

--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -15,7 +15,8 @@
         android:layout_marginStart="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="104dp"
-        android:text="Enter Distance ="
+        android:text="@string/edist"
+        android:textColor="@color/black"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +29,8 @@
         android:layout_marginStart="37dp"
         android:layout_marginLeft="37dp"
         android:layout_marginTop="35dp"
-        android:text="Total of seats ="
+        android:text="@string/nseat"
+        android:textColor="@color/black"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +43,8 @@
         android:layout_marginStart="13dp"
         android:layout_marginLeft="13dp"
         android:ems="6"
-        android:hint="Enter Distance"
+        android:hint="@string/edist"
+        android:textColorHint="@color/black"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/textView5" />
@@ -53,7 +56,8 @@
         android:layout_marginStart="21dp"
         android:layout_marginLeft="21dp"
         android:ems="6"
-        android:hint="No od seats"
+        android:hint="@string/nseat"
+        android:textColorHint="@color/black"
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
         app:layout_constraintStart_toEndOf="@+id/textView6" />
@@ -64,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="201dp"
         android:onClick="last"
-        android:text="Fair Fare"
+        android:text="@string/fairfare"
         android:textColor="#F3F0F1"
         android:background="#F10808"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -76,7 +80,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="14dp"
-        android:text="B-U-S"
+        android:text="@string/bus"
+        android:textColor="@color/black"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/dista"
