--- a/app/src/main/res/layout/activity_taxi.xml
+++ b/app/src/main/res/layout/activity_taxi.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="6"
-        android:hint="Enter Distance"
+        android:hint="@string/edist"
         android:inputType="numberSigned"
         android:textColorHint="#FFEB3B"
         app:layout_constraintBottom_toTopOf="@+id/seat"
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="6"
-        android:hint="  No of Seats"
+        android:hint="@string/nseat"
         android:inputType="number"
         android:textColorHint="#FFEB3B"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:background="#FFEB3B"
         android:onClick="last"
-        android:text="Fair Fare"
+        android:text="@string/fairfare"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="T-A-X-I"
+        android:text="@string/taxi"
         android:textColor="@color/white"
         android:textSize="30dp"
         android:textStyle="bold"
