--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
-        android:text="Name -"
+        android:text="@string/Name"
         android:textSize="20dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/Distance"
@@ -29,7 +29,7 @@
         android:layout_marginStart="2dp"
         android:layout_marginLeft="2dp"
         android:layout_marginBottom="64dp"
-        android:text="Phone -"
+        android:text="@string/Phone"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
@@ -45,7 +45,7 @@
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:ems="10"
-        android:hint="      Enter the Name"
+        android:hint="@string/hname"
         android:textColorHint="@color/black"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="208dp"
         android:onClick="secondPage"
-        android:text="Submit"
+        android:text="@string/submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
         android:layout_marginRight="2dp"
-        android:text="Email -"
+        android:text="@string/Email"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -83,7 +83,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fair Fare"
+        android:text="@string/fairfare"
         android:textColor="@color/black"
         android:textSize="35dp"
         android:textStyle="bold|italic"
@@ -101,7 +101,7 @@
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:ems="10"
-        android:hint="   Enter Phone Number"
+        android:hint="@string/hph"
         android:textColorHint="@color/black"
         android:inputType="phone"
         app:layout_constraintBaseline_toBaselineOf="@+id/Distance"
@@ -116,7 +116,7 @@
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
         android:ems="10"
-        android:hint="          Enter E-mail"
+        android:hint="@string/he"
         android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
