--- a/app/src/main/res/layout/activity_rickshaw.xml
+++ b/app/src/main/res/layout/activity_rickshaw.xml
@@ -13,8 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/black"
-        android:ems="10"
-        android:hint="Enter Distance"
+        android:ems="6"
+        android:hint="@string/edist"
         android:inputType="number"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,8 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/black"
-        android:ems="10"
-        android:hint="   No of Seats"
+        android:ems="6"
+        android:hint="@string/nseat"
         android:inputType="number"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="last"
-        android:text="Fair Fare"
+        android:text="@string/fairfare"
         android:background="@color/black"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/black"
-        android:text="R-I-C-K-S-H-A-W"
+        android:text="@string/rickshaw"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:textStyle="bold"
