--- a/app/src/main/res/layout/activity_take_distance.xml
+++ b/app/src/main/res/layout/activity_take_distance.xml
@@ -44,7 +44,7 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Any Image"
+        android:text="@string/choise"
         android:textSize="30dp"
         android:textStyle="bold"
         android:textAllCaps="true"
